k8s-deploy/bankapp-deployment.yml
kind: Deployment 
apiVersion: apps/v1
metadata:
  name: bankapp
  namespace: bank-ns 
  labels: 
    app: bank-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: bankapp-deploy
  template:
    metadata:
      name: bank-app
      labels:
        app: bankapp-deploy  
    spec:
      containers:
        - name: bankapp 
          image: rk0617/bank-app:latest
          ports:
            - containerPort: 8080 
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
