k8s-deploy/mysql-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-std
  namespace: bank-ns
  labels:
    app: mysql-std
spec:
  serviceName: mysql-service
  replicas: 2
  selector:
    matchLabels:
      app: mysql-deploy
  template:
    metadata:
      labels:
        app: mysql-deploy
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
