k8s-deploy/bankapp-service.yml
kind: Service
apiVersion: v1 
metadata:
  name: mysql-service 
  namespace: bank-ns 
  labels:
    app: mysql-service 
spec:
  selector:
    app: bankapp-deploy
  type: NodePort
  port:
    - protocol: TCP 
      targetPort: 8080
      port: 8080 
      nodePort: 30001
