k8s-deploy/mysql-service.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: mysql-service 
  namespace: bank-ns 
  labels: 
    app: mysql-headless 
spec:
  type: ClusterIP
  selector:
    app: mysql-std
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
