k8s-deploy/ing.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bank-ingress 
  namespace: bank-ns 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: demo.hicloud.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: bank-service
                  port:
                    number: 8080
